# leaflet-webgl-hybrid-poc

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  Trunk.production.toml  Trunk.toml  benchmark_results.csv  index-optimized.html  index.html  mise.toml  package.json  playwright.config.ts  service-worker.js  tailwind.config.js
.cargo/: config.toml
.github/workflows/: deploy-demo.yml  nightly-optimization.yml  size-budget.yml  wasm-analysis.yml
docs/: POC.md  README.md  trunk-references-audit.md
docs/ADR/: 001-map-rendering-technology.md  002-wasm-optimization-strategy.md  003-state-management-signals.md  README.md
docs/articles/: development-tips.md  dioxus-spa-architecture.md  dioxus-toml-configuration.md  e2e-testing-with-playwright.md  index.md  trunk-to-dioxus-migration.md  wasm-optimization-techniques.md  webgl-performance-optimization.md
docs/reports/: deploy-issue-2025-06-13.md  performance-comparison-report.md  poc-results-report.md  rust-dioxus-evaluation.md  wasm-allocator-comparison.md  wasm-optimization-report.md
docs/tasks/: 01-reactive-hooks-refactor.md  02-component-architecture.md  03-error-handling-debugging.md  04-performance-optimization.md  05-game-ready-integration.md  06-wasm-size-optimization.md  README.md  poc-task-summary.md  post-poc-tasks.md
e2e/: integration.spec.ts
public/: index.html  style.css  tailwind-generated.css  tailwind.css
scripts/: build-for-gh-pages.sh  build-optimized-trunk.sh  build-optimized.sh  build-quiet.sh  fix-index-html.sh  generate-types.sh  post-build-optimize.sh
src/: leaflet_helpers.js  main.rs
src/components/: benchmark.rs  canvas_map.rs  map.rs  mod.rs  webgl_map.rs
src/hooks/: mod.rs  use_benchmark.rs  use_chaos_engine.rs  use_map_config.rs
src/routes/: chaos.rs  chaos_original.rs  home.rs  map.rs  mod.rs
src/types/: mod.rs
src/utils/: fps_counter.rs  input_latency.rs  interval.rs  mod.rs  performance_metrics.rs
