[package]
name = "leaflet-webgl-hybrid-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router", "hooks", "signals", "html", "document", "macro", "launch"], default-features = false }
wasm-bindgen = { version = "0.2.100", default-features = false }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Performance",
    "PerformanceTiming",
    "console",
    "Location"
] }
js-sys = "0.3.77"
wee_alloc = { version = "0.4.5", optional = true }
smallvec = { version = "1.13", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[features]
default = []
wee_alloc = ["dep:wee_alloc"]

[profile.release]
opt-level = "z"     # サイズ最適化
lto = "fat"         # Link Time Optimization
codegen-units = 1   # 並列性を犠牲にして最適化
panic = "abort"     # パニックハンドラ削除
strip = true        # シンボル削除

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
